# egui-probe

./: Cargo.toml
examples/: default.rs  demo.rs
proc/: Cargo.toml
proc/src/: lib.rs  name_display.rs  probe copy.rs  probe.rs
src/: collections.rs  default.rs  lib.rs  num.rs  option.rs  style.rs  ui.rs  vec.rs  widget.rs
src/probes/: boolean.rs  map.rs  mod.rs  num.rs  option.rs  text.rs  vec.rs
